--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Crossword</title>
-  <base href="/cross">
+  <base href="/cross/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>html,body{width:100%;height:100%;padding:0;margin:0}body{font-family:Inter,sans-serif!important;background-color:#fafafa}</style><link rel="stylesheet" href="styles.d0e201fdce95b579.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.d0e201fdce95b579.css"></noscript></head>
